--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ h1, h2, h3, h4 {
     <!-- Encabezado -->
     <div class="row justify-content-center mb-5">
       <div class="col-md-8 text-center heading-section">
-        <h2 class="mb-4">Mini-documental Institucional</h2>
+        <h2 class="mb-4"></h2>
         <p class="lead">Un recorrido animado por la esencia del <strong>Liceo Ambrosio Echavarría</strong>.</p>
       </div>
     </div>
